// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="bp3-card bp3-elevation-0 signup-form"
>
  <form>
    <div
      className="bp3-form-group"
    >
      <label
        className="bp3-label"
        htmlFor="email"
      >
        Email
         
        <span
          className="bp3-text-muted"
        >
          required
        </span>
      </label>
      <div
        className="bp3-form-content"
      >
        <div
          className="bp3-input-group"
        >
          <input
            autoComplete="username"
            className="bp3-input"
            id="email"
            placeholder="Email"
            style={
              Object {
                "paddingRight": 10,
              }
            }
            type="text"
          />
        </div>
        <div
          className="bp3-form-helper-text"
        >
          Type your email
        </div>
      </div>
    </div>
    <div
      className="bp3-form-group"
    >
      <label
        className="bp3-label"
        htmlFor="password"
      >
        Email
         
        <span
          className="bp3-text-muted"
        >
          required
        </span>
      </label>
      <div
        className="bp3-form-content"
      >
        <div
          className="bp3-input-group"
        >
          <input
            autoComplete="current-password"
            className="bp3-input"
            id="password"
            placeholder="Email"
            style={
              Object {
                "paddingRight": 10,
              }
            }
            type="password"
          />
        </div>
        <div
          className="bp3-form-helper-text"
        >
          Type your email
        </div>
      </div>
    </div>
    <button
      className="bp3-button"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="submit"
    >
      <span
        className="bp3-button-text"
      >
        Create account
      </span>
    </button>
  </form>
</div>
`;

exports[`should render with errors 1`] = `
<div
  className="bp3-card bp3-elevation-0 signup-form"
>
  <form>
    <div
      className="bp3-form-group bp3-intent-warning"
    >
      <label
        className="bp3-label"
        htmlFor="email"
      >
        Email
         
        <span
          className="bp3-text-muted"
        >
          required
        </span>
      </label>
      <div
        className="bp3-form-content"
      >
        <div
          className="bp3-input-group bp3-intent-warning"
        >
          <input
            autoComplete="username"
            className="bp3-input"
            id="email"
            placeholder="Email"
            style={
              Object {
                "paddingRight": 10,
              }
            }
            type="text"
          />
        </div>
        <div
          className="bp3-form-helper-text"
        >
          Type your email
        </div>
      </div>
    </div>
    <div
      className="bp3-form-group bp3-intent-warning"
    >
      <label
        className="bp3-label"
        htmlFor="password"
      >
        Email
         
        <span
          className="bp3-text-muted"
        >
          required
        </span>
      </label>
      <div
        className="bp3-form-content"
      >
        <div
          className="bp3-input-group bp3-intent-warning"
        >
          <input
            autoComplete="current-password"
            className="bp3-input"
            id="password"
            placeholder="Email"
            style={
              Object {
                "paddingRight": 10,
              }
            }
            type="password"
          />
        </div>
        <div
          className="bp3-form-helper-text"
        >
          Type your email
        </div>
      </div>
    </div>
    <button
      className="bp3-button"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="submit"
    >
      <span
        className="bp3-button-text"
      >
        Create account
      </span>
    </button>
  </form>
</div>
`;
